k8s/03_service.yml
apiVersion: v1
kind: Service
metadata:
  name: bitstamp-exporter
  namespace: bitstamp-exporter
  labels:
    app: bitstamp-exporter
    exporter: mystrom
  annotations:
    alpha.monitoring.coreos.com/non-namespaced: "true"
spec:
  selector:
    app: bitstamp-exporter
  ports:
    - name: http-metrics
      port: 8080
      targetPort: 8080
      protocol: TCP
