k8s/04_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
  name: bitstamp-ingress
  namespace: bitstamp-exporter
spec:
  ingressClassName: nginx
  rules:
    - host: metrics.baar
      http:
        paths:
          - backend:
              service:
                name: bitstamp-exporter
                port:
                  number: 8080
            path: /bitstamp(/|$)(.*)
            pathType: Prefix
